# obfuscation

./: .gitignore  .gitmodules  Makefile.am  README.md  collect.sh  configure.ac  loop.sh  obfuscator  parallel.py  parse.py  setup.py
circuits/: clean.sh  conjunction.cry  conjunction.py  fourands.circ  not.circ  or.circ  point-json.py  point.py  twoands.circ  util.cry  util.py  xor.circ
code/: Makefile  README.md  branchingprogram.py  circ2bp.py  circ2bp_test.py  gradedencoding.py  indobf.py  makefile  obfuscator  obfuscator.py  run.py  setup.py  test.py  test_mlm.cpp  testme.py  utils.py
code/bp/: circ2bp.py  circ2bp_test.py
code/bp/circuits/: and.circuit  andxor.circuit  fourandsnot.circuit  nand.circuit  not.circuit  threeands.circuit  twoand.circuit  twoand2.circuit  xor.circuit
code/circuits/: add.acirc  addmul.acirc  and.circ  and.circuit  andxor.circ  andxor.circuit  dbland.circ  fourands.circ  fourandsnot.circuit  fourxors.circ  id.circ  mul.acirc  nand.circ  nand.circuit  not.circuit  point-5.json  point-json.py  point.py  sub.acirc  threeands.circ  threeands.circuit  threexors.circ  twoand.circuit  twomuls.acirc  twoxors.circ  xor-from-nands.circ  xor.circuit  xorand.circ
code/evaluate/: Makefile  evaluate.c
code/indobf/: agis_obfuscator.py  bp.py  bp_barrington.py  bp_sww.py  bp_sz.py  branchingprogram.py  circuit.py  gradedencoding.py  groups.py  layered_branching_program.py  obfuscator.py  run.py  sz_obfuscator.py  test.py  utils.py  z_obfuscator.py  zimmerman.py  zobfuscator.py
code/obf/: agis_bp.py  agis_obfuscator.py  bp.py  circuit.py  main.py  obfuscator.py  run.py  sz_bp.py  sz_obfuscator.py  test.py  utils.py  z_obfuscator.py
code/src/: Makefile  _obfuscator.cpp  _zobfuscator.cpp  circuit.cpp  circuit.h  clt_mlm.cpp  clt_mlm.h  evaluate.cpp  fastutils.c  mpz_pylong.c  mpz_pylong.cpp  obfuscator.cpp  obfuscator.h  obfuscator_wrapper.cpp  pyutils.cpp  pyutils.h  thpool.cpp  thpool.h  thpool_fns.cpp  thpool_fns.h  utils.cpp  utils.h  zobfuscator.cpp  zobfuscator.h  zobfuscator_wrapper.cpp
code/test/: fastutils_unittest.py
code/tests/: __init__.py  fastutils_unittest.py  test_mlm.cpp
code/unittests/: __init__.py  _obfuscator_unittest.py  fastutils_unittest.py
pyobf/: bp.py  circuit.py  main.py  obfuscator.py  sz_bp.py  sz_obfuscator.py  test.py  utils.py  z_obfuscator.py
python/: obfuscator  setup.py
python/circuits/: add.acirc  addmul.acirc  fourandsnot.circ
python/obf/: main.py  sz_bp.py  sz_obfuscator.py  test.py  z_obfuscator.py
python/src/: obfuscator_wrapper.cpp  pyutils.cpp
python/t/: __init__.py
pywrapper/: mpz_pylong.h  obfuscator_wrapper.cpp  pyutils.cpp  zobfuscator_wrapper.cpp
scripts/: compare-time.py  eval-time.py  extract-obf-size.py  extract-obf-time.py  graph-point.py  graph-secparam.py  obf-size.py  obf-time.py  obliviate.sh  point.sh  secparam.sh  utils.py  versus.sh
src/: Makefile.am  circuit.c  obfuscator.c  obfuscator.h  thpool.c  thpool_fns.c  thpool_fns.h  utils.c  utils.h  zobfuscator.c  zobfuscator.h
t/: __init__.py
